RemoteMacViews: Ensure window and view updates are synchronized

When updating the views::View size, ensure that the NSWindow size be
updated first (otherwise we end up with strange mismatches). Add a
TODO about merging methods here.

This requires access to the BridgedNativeWidget from
BridgedContentView, so make BridgedNativeWidget store a pointer to
BridgedContentView (from which it can access BridgedContentViewHost),
rather than storing a pointer to BridgedContentViewHost. Also change
one instance where we pulled the BridgedContentView from the NSWindow
to use the pointer directly.

Bug: 875776, 875731
Change-Id: Ia9c3d4238f6824e5595baa5d4e856c34ead0fb75
Reviewed-on: https://chromium-review.googlesource.com/1181926
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584582}
Former-commit-id: f2bae22e479aaca78d061b379bead022dd5acd40